2009-04-24  Martin Nordholts  <martinn@src.gnome.org>

	Convert Subversion references to git

	* HACKING
	* INSTALL
	* README.i18n
	* autogen.sh

2009-04-24  Martin Nordholts  <martinn@src.gnome.org>

	* README: Update link to GTK+ themes in README. Patch from
	Shlomi Fish.

2009-04-16  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimppaintcore.[ch]: made GimpCoords* parameter of
	GimpPaintCore::start() const.

	* app/paint/gimpbrushcore.c
	* app/paint/gimpclone.c
	* app/paint/gimpheal.c
	* app/paint/gimpperspectiveclone.c
	* app/paint/gimpsourcecore.c: changed accordingly.

2009-04-13  Tobias Mueller  <tobiasmue@gnome.org>

	Bug 574972 – Grayscale profile should be removed in RGB/Indexed mode

	* app/core/gimpimage-convert.c (gimp_image_convert): Remove the ICC 
	profile when image will be converted from/to grayscale mode.
	Patch by Yohinori Yamakawa <yam@yellowmagic.info>

2009-04-12  Martin Nordholts  <martinn@svn.gnome.org>

	* app/actions/debug-commands.c: Use the new gegl:introspect
	feature of showing the graph of nodes a given node depends
	on. This gives much better depicted graphs.

2009-04-11  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/*.c: various plug-in parameter cleanups that
	have piled up on my disk: some whitespace fixes and other
	formatting, but mostly changes to make plug-in boolean/enum
	parameter desciptions look more like the ones that are generated
	for core procedures.

2009-04-03  Michael Natterer  <mitch@gimp.org>

	Bug 577575 – transform tool fills underlying extracted area wrongly

	* app/tools/gimpfliptool.c
	* app/tools/gimpperspectivetool.c
	* app/tools/gimprotatetool.c
	* app/tools/gimpscaletool.c (gimp_*_tool_register): pass
	GIMP_CONTEXT_BACKGROUND_MASK to the register callback to the tools
	use the global background color.

2009-03-31  Sven Neumann  <sven@gimp.org>

	Bug 568479 – add PDB procedures to manipulate size of text box

	* tools/pdbgen/pdb/text_layer.pdb: add gimp-text-layer-resize,